<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second">

    <TextView
        android:id="@+id/tv_n2"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_num2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n1" />

    <TextView
        android:id="@+id/tv_n1"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_num1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="209dp"
        android:layout_height="63dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/et_n1"
        app:layout_constraintStart_toEndOf="@+id/tv_n1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="216dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/et_n2"
        app:layout_constraintStart_toEndOf="@+id/tv_n2"
        app:layout_constraintTop_toBottomOf="@+id/et_n1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="270dp"
        android:layout_height="106dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="44dp"
        android:text="@string/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_n2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="72dp"
        android:onClick="add"
        android:text="@string/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:onClick="sub"
        android:text="@string/btn_sub"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_muti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:onClick="muti"
        android:text="@string/btn_muti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_divied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:onClick="divied"
        android:text="@string/btn_divied"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_muti"
        app:layout_constraintStart_toEndOf="@+id/btn_muti" />


</androidx.constraintlayout.widget.ConstraintLayout>